[gd_scene load_steps=11 format=3 uid="uid://dlauapahh4mjx"]

[ext_resource type="Script" path="res://entities/player/player.gd" id="1_ipytp"]
[ext_resource type="SpriteFrames" uid="uid://cw03e80wm2qf1" path="res://entities/player/assets/player.tres" id="2_mdhno"]
[ext_resource type="Script" path="res://entities/components/isometric_animated_sprite_component.gd" id="3_hxrpy"]
[ext_resource type="Script" path="res://entities/components/velocity_component.gd" id="7_pwxfr"]
[ext_resource type="Texture2D" uid="uid://ds5hhb3hxkouk" path="res://assets/spell.png" id="90_7l10c"]
[ext_resource type="Script" path="res://entities/player/components/dashing_component.gd" id="91_etbmg"]
[ext_resource type="Script" path="res://entities/player/components/speed_component.gd" id="92_yal5q"]
[ext_resource type="Script" path="res://entities/components/orientation_component.gd" id="93_0xdff"]
[ext_resource type="Script" path="res://entities/player/components/player_input_component.gd" id="94_ccvjn"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_t62ou"]
radius = 26.0
height = 68.0

[node name="Player" type="CharacterBody2D"]
y_sort_enabled = true
motion_mode = 1
script = ExtResource("1_ipytp")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Sprite2D" type="AnimatedSprite2D" parent="." node_paths=PackedStringArray("_orientation_component")]
unique_name_in_owner = true
position = Vector2(0, -178)
sprite_frames = ExtResource("2_mdhno")
animation = &"walk3"
frame_progress = 0.404006
script = ExtResource("3_hxrpy")
_orientation_component = NodePath("../OrientationComponent")
animation_name = "idle"
zero_vector = Vector2(0, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_t62ou")

[node name="SpeedComponent" type="Node" parent="."]
script = ExtResource("92_yal5q")
speed = 600.0

[node name="DashingComponent" type="Timer" parent="." node_paths=PackedStringArray("speed_component")]
process_callback = 0
wait_time = 0.15
one_shot = true
script = ExtResource("91_etbmg")
speed_component = NodePath("../SpeedComponent")
dash_multiplier = 4.0

[node name="PlayerInputComponent" type="Node" parent="." node_paths=PackedStringArray("_orientation_component", "_velocity_component", "_speed_component")]
script = ExtResource("94_ccvjn")
_orientation_component = NodePath("../OrientationComponent")
_velocity_component = NodePath("../VelocityComponent")
_speed_component = NodePath("../SpeedComponent")

[node name="VelocityComponent" type="Node" parent="."]
script = ExtResource("7_pwxfr")

[node name="OrientationComponent" type="Node" parent="."]
script = ExtResource("93_0xdff")

[node name="Line2D" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 400, 0)
default_color = Color(1, 0, 0, 1)

[node name="Spell" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Spell"]
position = Vector2(250, 0)
rotation = -1.5708
texture = ExtResource("90_7l10c")
